[package]
name = "axi"
version = "0.1.0"
edition = "2021"
description = "A relatively fast KV storage with persistent storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
